[project]
name = "filetransfer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Colin", email = "1527190079@qq.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pytest>=8.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
